# project-2_konovalova_m25-555

./: .gitignore  Makefile  README.md  db_meta.json  pyproject.toml
src/: decorators.py
src/primitive_db/: constants.py  core.py  engine.py  main.py  parser.py  utils.py
